languages/CNNTrainLang/src/test/resources/valid_tests/FullConfig4.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration FullConfig{
     num_epoch : 5
     batch_size : 100
     load_pretrained : true
     eval_metric : mse
     loss: dice_loss{
        sparse_label: true
        from_logits: true
        loss_axis : -1
        batch_axis : 0
     }
     context : gpu
     normalize : true
     optimizer : rmsprop{
         learning_rate : 0.001
         learning_rate_minimum : 0.00001
         weight_decay : 0.01
         learning_rate_decay : 0.9
         learning_rate_policy : step
         step_size : 1000
         rescale_grad : 1.1
         clip_gradient : 10
         gamma1 : 0.9
         gamma2 : 0.9
         epsilon : 0.000001
         centered : true
         clip_weights : 10
     }
}
