languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckLearningParameterCombination3.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckLearningParameterCombination3{
     num_epoch : 5
     batch_size : 100
     load_checkpoint : true
     eval_metric : mse
     loss: cross_entropy
     context : gpu
     normalize : true
     optimizer : rmsprop{
         learning_rate : 0.001
         learning_rate_minimum : 0.00001
         weight_decay : 0.01
         learning_rate_decay : 0.9
         learning_rate_policy : step
         step_size : 1000
         rescale_grad : 1.1
         clip_gradient : 10
         gamma1 : 0.9
         gamma2 : 0.9
         epsilon : 0.000001
         centered : true
         clip_weights : 10
     }
     environment : gym { name:"CartPole-v1" }
}
